# VibeHack

./: .env.example  .gitignore  README.md  benchmark.py  benchmark_compiled.py  install.sh  move_imports.py  pyproject.toml  site_headers.txt  uninstall.sh
doc/: COMMANDS.md  FEATURES.md  GOVERNANCE.md  INSTALL.md
docs/: CNAME  COMMANDS.md  FEATURES.md  about.html  index.html  robots.txt  script.js  sitemap.xml  style.css
docs/manual/: COMMANDS.md  FEATURES.md  GOVERNANCE.md  INDEX.md  INSTALL.md
scratch/: test_update_logic.py
tests/: test_debug_container.py  test_guardrails.py  test_ingestion.py  test_memory.py  test_prompts.py  test_provisioner_security.py  test_rag_flow.py  test_repair.py  test_sandbox.py  test_session.py  test_shell.py  test_toolkit_manager.py  test_tui.py  test_ui_stripping.py  test_update_logic.py
vibehack/: __init__.py  cli.py  config.py  repl.py
vibehack/agent/: dynamic_skills.py  knowledge.py  loop.py  middlewares.py  pipeline.py  prompts.py  syntract.py
vibehack/agent/prompts/: __init__.py  builder.py  loader.py  options.py  (+4 more)
vibehack/core/: auth.py  discovery.py  editor.py  keyring_mgr.py  sandbox.py  shell.py  wizard.py
vibehack/guardrails/: honeypot.py  regex_engine.py
vibehack/llm/: __init__.py  bridge.py  defaults.json  google_auth.py  openrouter.py  provider.py  repair.py  schemas.py
vibehack/memory/: adaptive.py  db.py  ingestion.py
vibehack/reporting/: exporter.py  manager.py
vibehack/session/: persistence.py
vibehack/skills/: auth_bypass.md  nextjs.md  persistence.md  wordpress.md
vibehack/toolkit/: browser_agent.py  discovery.py  exploits.py  manager.py  provisioner.py
vibehack/ui/: tui.py
vibehack/utils/: version.py
web-landing/: index.html  style.css
(+11 files in other folders)
