[project]
name = "vibehack"
version = "2.6.44"
description = "Raw Shell / HitL Agentic Security Co-Pilot"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Rasyiqi", email = "rasyiqi@example.com" }
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.40.0",
    "pydantic>=2.7.0",
    "prompt-toolkit>=3.0.0",
    "PyYAML>=6.0.0",
    "google-auth>=2.20.0",
    "google-auth-oauthlib>=1.0.0",
    "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[project.scripts]
vibehack = "vibehack.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
